added code to use jquery validation on the terminology converter page to validate dynamic fields based on the regex expression returned

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,11 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
+// used with jquery validation
+.error {
+  color: red;
+}
+
 html, body {
   padding: 5px;
 }
