--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -268,6 +268,7 @@
     }
 
     $(document).ready(function () {
+      // remove popovers when the modal window is closed
       $(document).on('hide.bs.modal', '#myModal', function () {
         $('div.popover').remove();
       });
