--- a/app/views/terminology_converter/_term_source_change_content.html.erb
+++ b/app/views/terminology_converter/_term_source_change_content.html.erb
@@ -31,7 +31,7 @@
           // if data is empty then no classifiers were found
           if (data['classifiers'].length > 0) {
             // we build the drop down for classifiers to display to the user
-            var dd = $('<select>').attr("name", "ibdf_classifier").attr("id", "ibdf_classifier").attr("required", true).addClass('select2-prisme');
+            var dd = $('<select>').attr("name", "addl_ibdf_classifier").attr("id", "addl_ibdf_classifier").attr("required", true).addClass('select2-prisme');
             dd.attr('data-ph', 'Select the Additional IBDF Classifier');
             dd.attr('data-single_select', true);
             dd.attr('data-w', '350px');
