--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,9 +15,10 @@
               <li><a href="<%= terminology_source_packages_path %>" onclick="polling.checkPolling('tsp_upload');">Source Package Upload</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="<%= terminology_converter_path %>" onclick="polling.checkPolling('converter');">Convert Terminology</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="<%= terminology_db_builder_path %>" onclick="polling.checkPolling('db_builder');">Database Builder</a></li>
             </ul>
           </li>
-          <!--<li><a href="#" onclick="checkPolling('db_builder');">DB Builder</a></li>-->
           <li><a href="<%= app_deployer_path %>" onclick="polling.checkPolling('deployer');">App Deployer</a></li>
       <% end %>
       <li><a href="<%= prisme_job_queue_list_path %>" onclick="polling.checkPolling('job_queue');">Job Queue Listing</a></li>
