added polling enums for consistent key usage in registering polling methods; added styling for classic fieldset look; removed job_queue_controller and views as these are now on the welcome home page instead; nil checks for database builder metadata calls; refactored table filter to a partial; modified navigation menu to use polling enums for unregistering polling methods on menu change; modified polling js to call the polling function when the polling enum is registered;

--- a/app/views/layouts/_filter_table_poll_results.html.erb
+++ b/app/views/layouts/_filter_table_poll_results.html.erb
@@ -5,9 +5,21 @@
     <option value="30">30 Rows</option>
     <option value="45">45 Rows</option>
     <option value="60">60 Rows</option>
-    <option value="999999">All Rows</option>
+    <% unless (exclude_all_rows) %>
+        <option value="999999">All Rows</option>
+    <% end %>
   </select>
 </div>
 <script>
-  $('#<%=filter_id%>').change(<%= poll %>);
+  var $filter = $('#<%=filter_id%>');
+  $filter.change(function () {
+    var fnstring = "<%= poll %>";
+    var fnparams = [$filter.find('option:selected').val()];
+    var fn = window[fnstring];
+
+    // is object a function?
+    if (typeof fn === "function") {
+      fn.apply(null, fnparams);
+    }
+  });
 </script>
