--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -48,7 +48,7 @@
         <h4 class="modal-title">Terminology Conversion Request</h4>
       </div>
       <div class="modal-body">
-        <%= form_tag(terminology_converter_request_build_path, remote: true, id: 'myForm') do %>
+        <%= form_tag(terminology_converter_request_build_url, id: 'myForm') do %>
             <%= label_tag 'terminology_source', 'Terminology Source' %><br>
             <%= select_tag 'terminology_source',
                            options_from_collection_for_select(@sources, :option_key, :option_value),
@@ -65,8 +65,7 @@
             <br>
             <div id="term_source_details_div"></div>
             <div id="term_source_actions_div" class="modal-footer">
-              <%= submit_tag 'Submit', data: {disable_with: 'Processing Request...'}, class: 'btn btn-primary' %>
-              <a data-dismiss="modal" class="btn btn-primary">Cancel</a>
+              <div class="btn btn-primary btn-lg" onclick="submitPackage()" id="btn_submit">Submit Conversion Request</div>
             </div>
         <% end %>
       </div>
@@ -75,6 +74,14 @@
 </div>
 
 <script>
+  function submitPackage() {
+    var $myForm = $('#myForm');
+    if ($myForm.valid()) {
+      $("#btn_submit").attr('onclick', 'return false;').html('<span><i class="fa fa-cog fa-spin fa-fw" aria-hidden="true"></i>Processing Request...Please Wait</span>');
+      $myForm.submit();
+    }
+  }
+
   function term_source_change(val) {
     $('#term_source_actions_div').hide();
     if (val.length === 0) {
@@ -148,7 +155,7 @@
    */
   var fields = ['job_name', 'started_at', 'user', 'leaf_data.jenkins_job_name', 'leaf_data.jenkins_attempt_number', 'leaf_data.jenkins_build_result', 'leaf_data.completed_at', 'leaf_data.elapsed_time', 'leaf_data.jenkins_job_deleted'];
 
-  function loadTable(tableId, fields, data) {
+  function loadTable(tableId, data) {
     $('#' + tableId + ' tbody').empty();
 
     if (data.length > 0) {
@@ -173,7 +180,7 @@
       });
     }
     else {
-      var rows = '<tr><td colspan="9" style="text-align:center">There are no items to list...</td></tr>';
+      var rows = '<tr><td colspan="' + fields.length + '" style="text-align:center">There are no items to list...</td></tr>';
       $('#' + tableId + ' tbody').html(rows);
     }
   }
@@ -183,14 +190,14 @@
     var row_limit = parseInt($('#filter_rows').find('option:selected').val());
 
     $.getJSON(gon.routes.terminology_converter_load_build_data_path, {row_limit: row_limit}, function (data) {
-      loadTable('data-table', fields, data);
+      loadTable('data-table', data);
 
       <% if Rails.env.development? %>
-      if (polling.isPolling('terminology_converter')) {
+      if (polling.isPolling(polling.pollEnum.CONVERTER)) {
         $.getJSON(gon.routes.terminology_converter_check_polling_path, {}, function (data) {
           console.log(JSON.stringify(data));
           if (data.poll === false) {
-            polling.unregisterController('terminology_converter');
+            polling.unregisterPolling(polling.pollEnum.CONVERTER);
 
             //call final poll in case there is a timing issue
             poll();
@@ -202,48 +209,22 @@
   }
 
   $(document).ready(function () {
-    poll();
+//    poll();
 
     //register for polling
-    polling.registerController('terminology_converter', poll, 5000);
+    polling.registerPolling(polling.pollEnum.CONVERTER, poll, 5000);
 
     // call init_select2 to initialize all select inputs to use the select2 js library
     init_select2();
 
     // initialize the jquery validation plugin
     $('#myForm').validate({
-      errorPlacement: function(error, element) {
-        var lbl = $("label[for='"+ element.attr('id')+"']");
+      errorPlacement: function (error, element) {
+        var lbl = $("label[for='" + element.attr('id') + "']");
         error.addClass('arrow_box');
         error.insertAfter(lbl);
       }//,
       //wrapper: 'span'
     });
   });
-
-
-  //
-  ////    build a drop down
-  //    var dd = $('<select>').attr('name', 'kma').attr('id', 'kma').attr('multiple', true);
-  //    dd.data('placeholder', 'enter something');
-  ////    dd.append($('<option>').text('').attr('value', ''));
-  //    dd.append($('<option>').text('first').attr('value', 1).attr('title', 'this is the first one bobo'));
-  //    dd.append($('<option>').text('second').attr('value', 2).attr('title', 'this is the second item !'));
-  //    dd.append($('<option>').text('third').attr('value', 3));
-  ////    dd.addClass('chosen');
-  //    $("#kma_div").html(dd);
-  //    $( "#kma" ).select2({
-  //      theme: "bootstrap",
-  //      width: '500px',
-  //      tags: true
-  //    });
-  //    $(".chosen").chosen({
-  //      'no_results_text' :'Oops, nothing found!',
-  //      'width'           :'700px',
-  //      'search_contains' : true,
-  //      'placeholder_text_multiple':'Please choose something ...',
-  //      'display_selected_options':false
-  //    });
-
-  //    dd.chosen({});
 </script>
