--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -24,7 +24,7 @@
   <h1>Terminology Source Package Dashboard</h1>
 </div>
 
-<%= render 'layouts/filter_table_poll_results', filter_id: 'tsp_filter_rows', filter_label: 'Filter Results', poll: 'poll' %>
+<%= render 'layouts/filter_table_poll_results', filter_id: 'tsp_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'poll' %>
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
