--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -1,5 +1,5 @@
 <h2>PRISME Job Queue</h2>
-<%= render 'layouts/filter_table_poll_results', filter_id: 'pjq_filter_rows', filter_label: 'Filter Results', exclude_all_rows: true, poll: 'reload' %>
+<%= render 'layouts/filter_table_poll_results', filter_id: 'pjq_filter_rows', filter_label: 'Filter Results', include_all_rows: false, poll: 'reload' %>
 
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
