--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -15,8 +15,7 @@
   <h1>Terminology Database Builder</h1>
 </div>
 
-<!-- todo test rendering the filter poll erb and implement in source packages and term converter -->
-<%= render 'layouts/filter_table_poll_results', filter_id: 'tsp_filter_rows', filter_label: 'Filter Results', poll: 'tsp_poll()' %>
+<%= render 'layouts/filter_table_poll_results', filter_id: 'tsp_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'tsp_poll()' %>
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
