--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -4,18 +4,13 @@
   }
 </style>
 
-<script>
-  function tsp_poll() {
-    console.log('calling tsp_poller...');//todo implement this
-  }
-</script>
 <!-- Trigger the modal with a button -->
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="reset_form();">New Database Build Request</button>
 <div class="page-header">
   <h1>Terminology Database Builder</h1>
 </div>
 
-<%= render 'layouts/filter_table_poll_results', filter_id: 'tsp_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'tsp_poll()' %>
+<%= render 'layouts/filter_table_poll_results', filter_id: 'dbb_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'poll' %>
 <table id="data-table" class="prisme-table table-striped table-hover">
   <thead>
   <tr>
@@ -196,8 +191,12 @@
     }
 
     function poll() {
-      console.log('calling poll');
-      var row_limit = parseInt($('#tsp_filter_rows').find('option:selected').val());
+      console.log('calling poll - dbb');
+      var row_limit = arguments[0];
+
+      if (row_limit === undefined) {
+        row_limit = $('#dbb_filter_rows').find('option:selected').val();
+      }
 
       $.getJSON(gon.routes.terminology_db_builder_load_build_data_url, {row_limit: row_limit}, function (data) {
         loadTable('data-table', data);
