--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -19,7 +19,7 @@
   }
 </style>
 <!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create New Terminology Source Package</button>
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Terminology Source Package</button>
 <div class="page-header">
   <h1>Terminology Source Package Dashboard</h1>
 </div>
@@ -262,8 +262,12 @@
     }
 
     function poll() {
-      console.log('calling poll');
-      var row_limit = parseInt($('#tsp_filter_rows').find('option:selected').val());
+      console.log('calling poll - tsp');
+      var row_limit = arguments[0];
+
+      if (row_limit === undefined) {
+        row_limit = $('#tsp_filter_rows').find('option:selected').val();
+      }
 
       $.getJSON(gon.routes.terminology_source_packages_load_build_data_path, {row_limit: row_limit}, function (data) {
         loadTable('data-table', data);
